add index with redirect to listing micropage

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="7; url='https://listing.callisto.network'" />
   </head>
   <body>
-    <p>Please follow <a href="https://listing.callisto.network">this link</a>.</p>
+    <p style="text-align: center">Please follow <a href="https://listing.callisto.network">this link</a>.</p>
   </body>
 </html>
